--- a/assets/dotfiles/fastfetch.nixos/config.jsonc
+++ b/assets/dotfiles/fastfetch.nixos/config.jsonc
@@ -1,118 +1,132 @@
+
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-    	"source": "~/.config/fastfetch/nixos.png",
-    	"type": "kitty-direct",
-      "height": 18,
-      "width": 32,
-    	"padding": {
-    		"top": 3,
-                "left": 2
-    	}
+"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+"logo": {
+    "source": "~/.config/fastfetch/nixos.png",
+    "type": "kitty-direct",
+    "height": 20,
+    "width": 40,
+"padding": {
+"top": 1
+}
+},
+"display": {
+"separator": " 󰑃  "
+},
+"modules": [
+    "break",
+    {
+    "type": "os",
+    "key": " DISTRO",
+    "keyColor": "yellow"
     },
-    "display": {
-        "separator": " "
+    {
+    "type": "kernel",
+    "key": "│ ├",
+    "keyColor": "yellow"
     },
-    "modules": [
-	"break",
-        "break",
-        "break",
-	{
-            "type": "title",
-            "keyWidth": 10
-        },
-        "break",
-        {
-            "type": "os",
-            "key": " ",
-            "keyColor": "34",  // = color4
-        },
-        {
-            "type": "kernel",
-            "key": " ",
-            "keyColor": "34",
-        },
-        {
-            "type": "packages",
-            // "format": "{} (pacman)",
-            "key": " ",
-            "keyColor": "34",  
-        },
-        {
-            "type": "shell",
-            "key": " ",
-            "keyColor": "34", },
-        "break",
-        // {
-        //     "type": "terminal",
-        //     "key": " ",
-        //     "keyColor": "34", 
-        // },
-        {
-            "type": "wm",
-            "key": " ",
-            "keyColor": "34", 
-        },
-        // {
-        //     "type": "cursor",
-        //     "key": " ",
-        //     "keyColor": "34", 
-        // },
-        // {
-        //     "type": "terminalfont",
-        //     "key": " ",
-        //     "keyColor": "34", 
-        // },
-        {
-            "type": "uptime",
-            "key": " ",
-            "keyColor": "34", 
-        },
-        {
-            "type": "command",
-            "key": "󱦟 ",
-            "keyColor": "34",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-        },
-        // {
-        //     "type": "datetime",
-        //     "format": "{1}-{3}-{11}",
-        //     "key": " ",
-        //     "keyColor": "34", 
-        // },
-        // {
-        //     "type": "media",
-        //     "key": "󰝚 ",
-        //     "keyColor": "34", 
-        // },
-        // "break",
-        "break",
-        {
-            "type": "cpu",
-            "key": " ",
-            "keyColor": "blue"
-        },
-        {
+    {
+    "type": "packages",
+    "key": "│ ├󰏖",
+    "keyColor": "yellow"
+    },
+    {
+    "type": "shell",
+    "key": "│ └",
+    "keyColor": "yellow"
+    },
+    {
+    "type": "wm",
+    "key": " DE/WM",
+    "keyColor": "blue"
+    },
+    {
+    "type": "wmtheme",
+    "key": "│ ├󰉼",
+    "keyColor": "blue"
+    },
+    {
+    "type": "icons",
+    "key": "│ ├󰀻",
+    "keyColor": "blue"
+    },
+    {
+        "type": "cursor",
+        "key": "│ ├",
+        "keyColor": "blue",
+    },
+    {
+        "type": "terminalfont",
+        "key": "│ ├",
+        "keyColor": "blue",
+    },
+    {
+    "type": "terminal",
+    "key": "│ └",
+    "keyColor": "blue"
+    },
+    {
+    "type": "host",
+    "key": "󰌢 SYSTEM",
+    "keyColor": "green"
+    },
+    {
+    "type": "cpu",
+    "key": "│ ├󰻠",
+    "keyColor": "green"
+    },
+    {
+    "type": "gpu",
+    "key": "│ ├󰻑",
+    "format": "{2}",
+    "keyColor": "green"
+    },
+    {
             "type": "display",
-            "key": "󰌢 ",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "key": " ",
-            "keyColor": "blue"
-        },
-        {
-            "type": "memory",
-            "key": " ",
-            "keyColor": "blue"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m "
-        },
-        "break",
-        "break",
+    "key": "│ ├󰍹",
+    "keyColor": "green",
+    "compactType": "original-with-refresh-rate"
+    },
+    {
+    "type": "memory",
+    "key": "│ ├󰾆",
+    "keyColor": "green"
+    },
+    {
+    "type": "swap",
+    "key": "│ ├󰓡",
+    "keyColor": "green"
+    },
+    {
+    "type": "uptime",
+    "key": "│ ├󰅐",
+    "keyColor": "green"
+    },
+    {
+    "type": "display",
+    "key": "│ └󰍹",
+    "keyColor": "green"
+    },
+    {
+    "type": "sound",
+    "key": " AUDIO",
+    "format": "{2}",
+    "keyColor": "magenta"
+    },
+    {
+    "type": "player",
+    "key": "│ ├󰥠",
+    "keyColor": "magenta"
+    },
+    {
+    "type": "media",
+    "key": "│ └󰝚",
+    "keyColor": "magenta"
+    },
+    {
+    "type": "custom",
+    "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[38m  \u001b[39m  \u001b[39m    \u001b[38m  \u001b[37m  \u001b[36m  \u001b[35m  \u001b[34m  \u001b[33m  \u001b[32m  \u001b[31m  \u001b[90m "
+    },
+    "break",
     ]
 }
