--- a/assets/dotfiles/kitty/kitty.conf
+++ b/assets/dotfiles/kitty/kitty.conf
@@ -9,7 +9,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 12.25
+font_size 12
 
 # force_ltr no
 
@@ -781,9 +781,9 @@ tab_fade 0.80 0.89 0.97 1
 # tab_separator " ┇"
 
 # angled/slanted/round
-tab_powerline_style slanted
+tab_powerline_style angled
 
-tab_title_max_length 12
+tab_title_max_length 14
 
 tab_title_template  " {index} {title} "
 
