Added launcher submap to keybinds

--- a/assets/dotfiles/hypr/UserConfigs/UserKeybinds.conf
+++ b/assets/dotfiles/hypr/UserConfigs/UserKeybinds.conf
@@ -11,6 +11,27 @@ $term = kitty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
+# Submap $launcher
+
+bind = $mainMod, R, submap, launcher # will switch to a submap called 'emacs'
+submap = launcher # will start a submap called "launcher"
+# sets repeatable binds for resizing the active window
+binde = , R, exec, $reset $launcher
+binde = , A, exec, $reset alacritty         
+binde = , B, exec, $reset thorium-browser         
+binde = , D, exec, $reset discord-canary 
+binde = , E, exec, $reset evolution 
+binde = , K, exec, $reset kitty 
+binde = , N, exec, $reset neovide 
+binde = , T, exec, $reset thunar 
+binde = , P, exec, $reset ptyxis 
+binde = , W, exec, $reset wezterm 
+
+# use reset to go back to the global submap
+bind = , escape, submap, reset 
+# will reset the submap, which will return to the global submap
+submap = reset
+
 # rofi App launcher
 #bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
 bind = $mainMod, D, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
@@ -20,6 +41,7 @@ bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview'
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files # Launch file manager
+bind = $mainMod ALT, T, exec, kitty --class dotfiles-floating
 
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 
@@ -39,3 +61,5 @@ bind = $mainMod ALT, P, submap, reset
 submap = reset
 
 bind = $mainMod shift, E, exec, [float] kitty
+
+bind = $mainMod shift, I, togglesplit,
