Updated UserKeybinds.conf for ghostty

--- a/assets/dotfiles/hypr/UserConfigs/UserKeybinds.conf
+++ b/assets/dotfiles/hypr/UserConfigs/UserKeybinds.conf
@@ -7,7 +7,8 @@
 
 $mainMod = SUPER
 $files = thunar
-$term = kitty
+#$term = kitty
+$term = wezterm
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
@@ -21,6 +22,7 @@ binde = , A, exec, $reset alacritty
 binde = , B, exec, $reset thorium-browser         
 binde = , D, exec, $reset discord-canary 
 binde = , E, exec, $reset evolution 
+binde = , G, exec, $reset ghostty 
 binde = , K, exec, $reset kitty 
 binde = , N, exec, $reset neovide 
 binde = , T, exec, $reset thunar 
