Updated waybar for niri
 On branch Dev-2
 Your branch is up to date with 'origin/Dev-2'.

 Changes to be committed:
	modified:   assets/niri/waybar-alt-2/config.ini

--- a/assets/niri/waybar-alt-2/config.ini
+++ b/assets/niri/waybar-alt-2/config.ini
@@ -8,8 +8,8 @@
 
     // Choose the order of the modules
 
-    "modules-left": ["custom/launcher","custom/changewaybar"],
-    "modules-right": [ "custom/pacman", "custom/weather","backlight", "custom/keyboard-layout",  "temperature",  "cpu", "memory", "battery", "pulseaudio", "tray", "idle_inhibitor", "clock","custom/power"],
+    "modules-left": ["custom/launcher", "custom/weather", "tray"],
+    "modules-right": [  "backlight", "custom/keyboard-layout",  "temperature",  "cpu", "memory", "battery", "pulseaudio", "idle_inhibitor", "clock","custom/power"],
 
  // Modules configuration
 
